# toiletcli

./: Cargo.toml  LICENSE  README.md
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/lib/: all.html  enum.FlagType.html  fn.parse_flags.html  fn.program_name_from_path.html  index.html  type.Flag.html
doc/src/lib/: lib.rs.html
doc/src/toiletcli/: lib.rs.html
doc/toiletcli/: all.html  enum.FlagType.html  fn.parse_flags.html  fn.program_name_from_path.html  index.html  sidebar-items.js  type.Flag.html
examples/: cat.rs  color.rs  colors.rs  escapes.rs  flags.rs  lines.rs
src/: colors.rs  common.rs  escapes.rs  flags.rs  lib.rs  lines.rs
src/ansi/: colors.rs  escapes.rs  mod.rs
