[package]
name    = "toiletcli"
readme  = "README.md"
authors = ["toiletbril"]
repository = "https://github.com/toiletbril/toiletcli"
license = "MIT"
version = "0.7.1"
edition = "2021"

description = "Minimal framework for command line applications."

include    = ["/src"]
keywords   = ["cli", "tools", "lib"]
categories = ["command-line-utilities"]

[features]
default   = ["flags", "colors", "escapes"]
colors    = []
escapes   = []
flags     = []

[lib]
name = "toiletcli"
path = "src/lib.rs"
test = true
crate-type = ["cdylib", "lib"]

[[example]]
name = "cat"
path = "examples/cat.rs"

[[example]]
name = "flags"
path = "examples/flags.rs"

[[example]]
name = "colors"
path = "examples/colors.rs"

[profile.release]
opt-level = 3
strip = true
lto = true
