[package]
name    = "toiletcli"
readme  = "README.md"
authors = ["toiletbril"]
license = "MIT"
version = "0.9.3"
edition = "2021"

repository  = "https://github.com/toiletbril/toiletcli"
description = "Framework for command line applications."

include    = ["/src"]
keywords   = ["cli", "tools", "lib"]
categories = ["command-line-utilities"]

[features]
default    = ["flags", "colors", "escapes"]
colors     = []
mock_codes = ["colors"] # forces "colors" to print mock codes instead of real ones for debugging
escapes    = []
flags      = []

[lib]
name = "toiletcli"
path = "src/lib.rs"
test = true
crate-type = ["cdylib", "lib"]

[[example]]
name = "cat"
path = "examples/cat.rs"

[[example]]
name = "flags"
path = "examples/flags.rs"

[[example]]
name = "colors"
path = "examples/colors.rs"

[profile.release]
opt-level = 3
strip = true
lto = true

[dependencies]
atty = "0.2.14"
